--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,13 +1,53 @@
-<core:View controllerName="sap.ui.demo.MockServer.controller.App" xmlns:core="sap.ui.core" xmlns:html="http://www.w3.org/1999/xhtml"
-	xmlns="sap.m">
-	<List headerText="{i18n>headerText}" id="list" items="{/Meetups}" noDataText="{i18n>noDataText}">
-		<items>
-			<ObjectListItem number="{ path: 'EventDate', type: 'sap.ui.model.type.DateTime', formatOptions: { style: 'medium' } }" title="{Title}">
-				<attributes>
-					<ObjectAttribute text="{Description}"/>
-				</attributes>
-			</ObjectListItem>
-		</items>
-	</List>
-	<Button press="onPressAction" text="{i18n>loadFirstItems}"></Button>
+<core:View xmlns:core="sap.ui.core" xmlns="sap.m"
+	xmlns:smartFilterBar="sap.ui.comp.smartfilterbar" xmlns:smartTable="sap.ui.comp.smarttable"
+	xmlns:html="http://www.w3.org/1999/xhtml"
+	xmlns:app="http://schemas.sap.com/sapui5/extension/sap.ui.core.CustomData/1"
+	controllerName="sap.ui.demo.MockServer.controller.App"
+	height="100%">
+	<smartFilterBar:SmartFilterBar id="smartFilterBar"
+		entityType="LineItems" persistencyKey="SmartFilter_Explored">
+		<smartFilterBar:controlConfiguration>
+			<smartFilterBar:ControlConfiguration
+				key="Bukrs">
+				<!--<smartFilterBar:defaultFilterValues>-->
+				<!--	<smartFilterBar:SelectOption low="0001">-->
+				<!--	</smartFilterBar:SelectOption>-->
+				<!--</smartFilterBar:defaultFilterValues>-->
+			</smartFilterBar:ControlConfiguration>
+			<smartFilterBar:ControlConfiguration
+				key="Gjahr">
+				<!--<smartFilterBar:defaultFilterValues>-->
+				<!--	<smartFilterBar:SelectOption low="2014">-->
+				<!--	</smartFilterBar:SelectOption>-->
+				<!--</smartFilterBar:defaultFilterValues>-->
+			</smartFilterBar:ControlConfiguration>
+		</smartFilterBar:controlConfiguration>
+	</smartFilterBar:SmartFilterBar>
+	<smartTable:SmartTable entitySet="LineItemsSet" editable="true"
+		smartFilterId="smartFilterBar" tableType="ResponsiveTable"
+		useExportToExcel="true" useVariantManagement="false"
+		useTablePersonalisation="true" header="Line Items" showRowCount="true"
+		persistencyKey="SmartTableAnalytical_Explored" enableAutoBinding="true"
+		demandPopin="true">
+		<Table>
+			<columns>
+				<Column width="100px" hAlign="Left">
+					<customData>
+						<core:CustomData key="p13nData"
+							value='\{"columnKey": "Dmbtr", "maxLength": "5","columnIndex":"4", "leadingProperty": "Dmbtr"}' />
+					</customData>
+					<Text text="{/#LineItems/Dmbtr/@sap:label}" />
+				</Column>
+			</columns>
+			<items>
+				<ColumnListItem>
+					<cells>
+						<Text
+							text="{Dmbtr}" />
+					</cells>
+				</ColumnListItem>
+			</items>
+		</Table>
+	</smartTable:SmartTable>
+
 </core:View>
